k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-pdev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: promise.dev
      http:
        paths:
          - path: /api/hello
            pathType: Prefix
            backend:
              service:
                name: pdevserver-svc
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pdevclient-srv
                port:
                  number: 3000
